src/objects/ddrive__Personal_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Campaign_Datetime_Entered__c</fullName>
        <label>Campaign Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Campaign_Last_Modified_Datetime__c</fullName>
        <label>Campaign Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>DD Personal Campaigns</relationshipLabel>
        <relationshipName>DD_Personal_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_FirstName__c</fullName>
        <label>Constituent FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Id__c</fullName>
        <label>Constituent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_LastName__c</fullName>
        <label>Constituent LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Name__c</fullName>
        <label>Constituent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Constituent_Address_1__c</fullName>
        <label>Constituent Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Constituent_Address_2__c</fullName>
        <label>Constituent Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Constituent_City__c</fullName>
        <label>Constituent City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Constituent_Country__c</fullName>
        <label>Constituent Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Constituent_Email__c</fullName>
        <label>Constituent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Constituent_Postal_Code__c</fullName>
        <label>Constituent Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__DonorDrive_Constituent_State__c</fullName>
        <label>Constituent State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_ID__c</fullName>
        <label>Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__Fundraising_Goal__c</fullName>
        <label>Fundraising Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Host__c</fullName>
        <label>Referrer Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Path__c</fullName>
        <label>Referrer Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Token__c</fullName>
        <label>Referrer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DD Personal Campaign</label>
    <listViews>
        <fullName>ddrive__All</fullName>
        <columns>NAME</columns>
        <columns>ddrive__Fundraising_Goal__c</columns>
        <columns>ddrive__Name__c</columns>
        <columns>ddrive__Type__c</columns>
        <columns>ddrive__External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Personal Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>